# BTAS

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
btas/: aliases.h  array_adaptor.h  axpy_impl.h  blas_type.h  btas.h  btas_fwd.h  btas_iterator.h  contract.h  corange.h  defaults.h  error.h  features.h  fwd.h  gemm_impl.h  index.h  index_traits.h  macros.h  memory_reference.h  nditerator.h  numeric_type.h  numerictype.h  ordinal.h  range.h  range_iterator.h  range_traits.h  resize.h  serialization.h  sliced_tensor.h  storage_traits.h  storageref.h  tarray.h  tensor.h  tensor_func.h  tensor_traits.h  tensorview.h  tensorview_iterator.h  type_traits.h  types.h  varray.h  version.h.in
btas/generic/: Khatri_Rao_Product.h  axpy_impl.h  blas_lapack_delegator.h  contract.h  converge_class.h  core_contract.h  coupled_cp_als.h  cp.h  cp_als.h  cp_bcd.h  cp_df_als.h  cp_rals.h  default_random_seed.h  dot_impl.h  element_wise_contract.h  elementwise_rand_contract.h  flatten.h  gemm_impl.h  gemv_impl.h  ger_impl.h  gesvd_impl.h  khatri_rao_product.h  lapack_extensions.h  lapack_extensions.hpp  linear_algebra.h  mkl_extensions.h  mkl_extensions.hpp  numeric_type.h  permute.h  rals_helper.h  randomized.h  reconstruct.h  reindex.h  scal_impl.h  swap.h  tensor_iterator_wrapper.h  transpose.h  tuck_comp_cp_als.ipp  tuck_cp_als.h  tucker.h  (+1 more)
btas/hdf5/: read_write.h
btas/optimize/: contract.h
btas/special/: cp_als.h  permute.h
btas/util/: deprecated.h  functional.h  iterator_traits.h  mohndle.h  optional_ptr.h  sequence_adaptor.h  stride.h
btas/varray/: allocators.h  memory_reference.h  varray.h
btas/work/: axpy_impl.h  btas.h  numeric_type.h  slice.h  tensor_Nov12.13.h
cmake/: btas-config.cmake.in
cmake/modules/: AddCustomTargetSubproject.cmake  CheckLibraryList.cmake  FindCBLAS.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindOrFetchBoost.cmake  FindOrFetchHighFive.cmake  FindOrFetchLinalgPP.cmake  RedefaultableOption.cmake
doc/: CMakeLists.txt  Doxyfile.in  index.dox  main.dox  manual.dox  modules.dox  range.dox  storage.dox  tensor.dox
doc/examples/: CMakeLists.txt  synopsis.C  synopsis.cxx
test/: compile.sh  contract_test.C  mytest.C  synopsis.C  tarray_test.C  test.C  test.x  test_contract.C  test_nditer.C  test_nditer_str.C  test_slice.C  test_ta.C  test_tensorfunc.C  test_tensorview.C  test_tensvorview.C
unittest/: CMakeLists.txt  Makefile  catch.hpp  contract_test.cc  cp_test_results.txt  dot_test.cc  mat3D_res.txt  mat3d.txt  mat4D.txt  mat4D_res.txt  mat5D.txt  mat5D_res.txt  mohndle_test.cc  performance.cc  range_test.cc  tensor_blas_test.cc  tensor_cp_test.cc  tensor_func_test.cc  tensor_lapack_test.cc  tensor_test.cc  tensorview_test.cc  test.h  z-mat3D.txt  z-mat4D.txt  ztensor_cp_test.cc
